# whisper_server

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  transcribe.py
.kiro/specs/whisperx-fastapi-server/: design.md  requirements.md  tasks.md  test-summary.md
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py  dependencies.py  main.py  security.py
app/api/: health.py
app/api/v1/: models.py  transcriptions.py
app/core/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py  middleware.py  security.py
app/models/: __init__.py  requests.py  responses.py
app/services/: __init__.py  audio_processor.py  diarization.py  health.py  language_detector.py  model_manager.py  transcription.py
app/utils/: __init__.py  transcribe_utils.py
docker/: entrypoint.sh
plans/: 001-model-management-endpoints.md  002-transcription-service.md  003-implement-transcriptions-endpoint.md  004-health-check-endpoints.md  005-error-handling-middleware.md  006-application-startup-di.md  007-production-deployment-config.md
tests/: conftest.py  test_api_health.py  test_api_models.py  test_api_transcriptions.py  test_app_lifecycle.py  test_audio_processor.py  test_auth.py  test_deployment.py  test_error_handlers.py  test_language_detector.py  test_model_manager.py  test_models.py  test_openai_compatibility.py  test_performance.py  test_transcribe_utils.py  test_transcription_service.py
torch/: __init__.py
whisper/: __init__.py
whisper/tokenizer/: __init__.py
whisperx/: __init__.py
